# quotachecker-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  commit_message.txt  pr_description.txt  product_quality_audit.md
.Jules/: palette.md
docs/: AGENT.md  GEMINI.md  IDENTITY.md  MEMORY.md  SOUL.md  demo.tape
docs/wiki/: agent-sop.md  architecture.md  development.md  hygiene.md  index.md
src/: agent.rs  config.rs  main.rs  tests.rs  ui.rs
