[package]
name = "quotachecker-tui"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
crossterm = { version = "0.29.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5.0"
